# octos

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  ORG-README.md  README-zh.md  README.md  cliff.toml  docker-compose.yml  model_catalog.json  typos.toml
crates/app-skills/account-manager/: Cargo.toml  SKILL.md  manifest.json
crates/app-skills/deep-crawl/: Cargo.toml  SKILL.md  manifest.json
crates/app-skills/deep-search/: Cargo.toml  SKILL.md  manifest.json
crates/app-skills/harness-starter-audio/: Cargo.toml  SKILL.md  manifest.json  workspace-policy.toml
crates/app-skills/harness-starter-coding/: Cargo.toml  SKILL.md  manifest.json  workspace-policy.toml
crates/app-skills/harness-starter-generic/: Cargo.toml  SKILL.md  manifest.json  workspace-policy.toml
crates/app-skills/harness-starter-report/: Cargo.toml  SKILL.md  manifest.json  workspace-policy.toml
crates/app-skills/news/: Cargo.toml  SKILL.md  manifest.json
crates/app-skills/send-email/: Cargo.toml  SKILL.md  manifest.json
crates/app-skills/skill-evolve/: Cargo.toml  manifest.json
crates/app-skills/time/: Cargo.toml  SKILL.md  manifest.json
crates/app-skills/voice/: Cargo.toml  SKILL.md  manifest.json
crates/app-skills/weather/: Cargo.toml  SKILL.md  manifest.json
crates/crew-agent/: Cargo.toml
crates/crew-agent/src/: agent.rs  bootstrap.rs  builtin_skills.rs  bundled_app_skills.rs  compaction.rs  exec_env.rs  hooks.rs  lib.rs  mcp.rs  progress.rs  prompt_guard.rs  prompt_layer.rs  provider_tools.rs  sandbox.rs  sanitize.rs  session.rs  skills.rs  steering.rs  turn.rs
crates/crew-agent/tests/: browser_research.rs  integration.rs  multi_model.rs  security_sandbox.rs
crates/crew-bus/: Cargo.toml
crates/crew-bus/src/: api_channel.rs  bus.rs  channel.rs  cli_channel.rs  coalesce.rs  cron_service.rs  discord_channel.rs  email_channel.rs  feishu_channel.rs  heartbeat.rs  lib.rs  markdown_html.rs  session.rs  slack_channel.rs  telegram_channel.rs  twilio_channel.rs  wecom_bot_channel.rs  wecom_channel.rs  wecom_crypto.rs  whatsapp_channel.rs
crates/crew-cli/: Cargo.toml
crates/crew-cli/src/: compaction.rs  config.rs  config_watcher.rs  cron_tool.rs  main.rs  otp.rs  persona_service.rs  process_manager.rs  profiles.rs  session_actor.rs  status_indicator.rs  status_layers.rs  stream_reporter.rs  updater.rs
crates/crew-cli/tests/: ux_integration.rs
crates/crew-llm/: Cargo.toml
crates/crew-llm/src/: adaptive.rs  anthropic.rs  config.rs  context_override.rs  embedding.rs  error.rs  failover.rs  gemini.rs  high_level.rs  lib.rs  middleware.rs  ominix.rs  openai.rs  openai_responses.rs  openrouter.rs  pricing.rs  provider.rs  responsiveness.rs  retry.rs  router.rs  sse.rs  stream_accumulator.rs  swappable.rs  transcription.rs  types.rs  vision.rs
crates/crew-llm/tests/: tool_call_conversation.rs
crates/crew-plugin/: Cargo.toml
crates/crew-plugin/examples/: validate_skills.rs
crates/crew-plugin/src/: discovery.rs  gating.rs  lib.rs  manifest.rs  types.rs
crates/octos-agent/: Cargo.toml
crates/octos-agent/examples/: inspection_safety.rs  realtime_heartbeat.rs  robot_domain_hook.rs
crates/octos-agent/src/: abi_schema.rs  behaviour.rs  bootstrap.rs  bundled_app_skills.rs  compaction.rs  compaction_tiered.rs  cost_ledger.rs  dispatch_policy.rs  event_bus.rs  exec_env.rs  file_state_cache.rs  harness_errors.rs  harness_events.rs  hooks.rs  lib.rs  loop_detect.rs  mcp.rs  mcp_server.rs  permissions.rs  policy.rs  progress.rs  prompt_context.rs  prompt_guard.rs  prompt_layer.rs  recorder.rs  role_template.rs  sandbox.rs  sanitize.rs  skills.rs  steering.rs  subagent_output.rs  subagent_summary.rs  subprocess_env.rs  summarizer.rs  task_supervisor.rs  turn.rs  validators.rs  workspace_contract.rs  workspace_git.rs  workspace_policy.rs
crates/octos-agent/tests/: abi_compat.rs  activate_tools_regression.rs  agent_mcp_dispatch_policy.rs  browser_research.rs  child_primitive_contracts.rs  compaction_policy.rs  compaction_wiring.rs  concurrent_scheduler.rs  cost_ledger.rs  cost_reservation.rs  dangerous_permissions.rs  delegate_tool.rs  domain_hook.rs  harness_errors.rs  integration.rs  loop_retry_state.rs  m8_end_to_end_gate.rs  m8_integration_cache_handoff.rs  m8_integration_concurrency.rs  m8_integration_subagent_runtime.rs  m8_integration_tool_context.rs  m8_plugin_v2_contract.rs  mcp_agent_backend.rs  mcp_server.rs  multi_model.rs  persist_append_only_log_new16.rs  realtime_loop.rs  retry_state_persistence.rs  robot_tool_policy.rs  security_sandbox.rs  session_summary.rs  slides_validator_project_scope.rs  spawn_only_handle_envelope.rs  spawn_only_policy_gate.rs  subagent_output_and_summary.rs  test_hn_fetch.rs  test_news_fetch.rs  tiered_compaction_loop.rs  validator_runner.rs
crates/octos-bus/: Cargo.toml
crates/octos-bus/src/: api_channel.rs  bus.rs  channel.rs  cli_channel.rs  coalesce.rs  cron_service.rs  cron_types.rs  dedup.rs  discord_channel.rs  email_channel.rs  feishu_channel.rs  file_handle.rs  heartbeat.rs  lib.rs  line_channel.rs  markdown_html.rs  matrix_channel.rs  media.rs  qq_bot_channel.rs  resume_policy.rs  session.rs  slack_channel.rs  telegram_channel.rs  twilio_channel.rs  wechat_channel.rs  wecom_bot_channel.rs  wecom_channel.rs  whatsapp_channel.rs
crates/octos-bus/tests/: api_channel_property.rs  jsonl_replay_thread_binding.rs  matrix_swarm_supervisor.rs
crates/octos-cli/: Cargo.toml  build.rs
crates/octos-cli/src/: admin_token_store.rs  cli_agent_adapter.rs  compaction.rs  config.rs  config_watcher.rs  content_catalog.rs  cron_tool.rs  gateway_dispatcher.rs  lib.rs  login_allowlist.rs  main.rs  monitor.rs  otp.rs  persona_service.rs  process_manager.rs  profiles.rs  project_templates.rs  qos_catalog.rs  session_actor.rs  skills_scope.rs  (+10 more)
crates/octos-core/: Cargo.toml
crates/octos-dora-mcp/: Cargo.toml
crates/octos-llm/: Cargo.toml
crates/octos-memory/: Cargo.toml
crates/octos-pipeline/: Cargo.toml
crates/octos-plugin/: Cargo.toml
crates/octos-sandbox/: Cargo.toml
crates/octos-swarm/: Cargo.toml
(+1058 files in other folders)
