[workspace]
resolver = "2"
members = [
    "crates/crew-core",
    "crates/crew-memory",
    "crates/crew-llm",
    "crates/crew-agent",
    "crates/crew-bus",
    "crates/crew-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["crew-rs team"]
license = "Apache-2.0"
repository = "https://github.com/heyong4725/crew-rs"

[workspace.dependencies]
# Internal crates
crew-core = { path = "crates/crew-core" }
crew-memory = { path = "crates/crew-memory" }
crew-llm = { path = "crates/crew-llm" }
crew-agent = { path = "crates/crew-agent" }
crew-bus = { path = "crates/crew-bus" }

# codex-rs crates (reused)
codex-execpolicy = { git = "https://github.com/openai/codex", path = "codex-rs/execpolicy" }
codex-state = { git = "https://github.com/openai/codex", path = "codex-rs/state" }
codex-file-search = { git = "https://github.com/openai/codex", path = "codex-rs/file-search" }
codex-linux-sandbox = { git = "https://github.com/openai/codex", path = "codex-rs/linux-sandbox" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Crypto
sha2 = "0.10"

# Error handling (dora-rs pattern)
eyre = "0.6"
color-eyre = "0.6"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "2"
dirs = "5"
rustyline = "15"
open = "5"

# HTTP client (using rustls for pure Rust, no OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "blocking", "multipart"] }
htmd = "0.5"

# Database (pure Rust)
redb = "2"

# File search
glob = "0.3"
regex = "1"
ignore = "0.4"

# Cron expressions
cron = "0.15"

# Time and IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Async utilities
futures = "0.3"

# Channel integrations (optional, pulled in via feature flags)
teloxide = { version = "0.17", default-features = false, features = ["rustls"] }
serenity = { version = "0.12", default-features = false, features = ["rustls_backend", "gateway", "client", "http", "model"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["rustls-tls-native-roots"] }

# Email channel (optional)
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
tokio-rustls = { version = "0.26", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
webpki-roots = "0.26"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
mailparse = "0.16"

# Web API (optional)
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
tokio-test = "0.4"
tempfile = "3"
