[workspace]
resolver = "2"
members = [
    "crates/octos-core",
    "crates/octos-memory",
    "crates/octos-llm",
    "crates/octos-agent",
    "crates/octos-bus",
    "crates/octos-cli",
    "crates/app-skills/news",
    "crates/app-skills/deep-search",
    "crates/app-skills/deep-crawl",
    "crates/app-skills/send-email",
    "crates/app-skills/account-manager",
    "crates/app-skills/time",
    "crates/app-skills/weather",
    "crates/app-skills/wechat-bridge",
    "crates/app-skills/pipeline-guard",
    "crates/app-skills/skill-evolve",
    "crates/platform-skills/voice",
    "crates/octos-pipeline",
    "crates/octos-plugin",
    "crates/octos-sandbox",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.85.0"
authors = ["octos team"]
license = "Apache-2.0"
repository = "https://github.com/octos-org/octos"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.dependencies]
# Internal crates
octos-core = { path = "crates/octos-core" }
octos-memory = { path = "crates/octos-memory" }
octos-llm = { path = "crates/octos-llm" }
octos-agent = { path = "crates/octos-agent" }
octos-bus = { path = "crates/octos-bus" }
octos-pipeline = { path = "crates/octos-pipeline" }
octos-plugin = { path = "crates/octos-plugin" }

# codex-rs crates (reused)
codex-execpolicy = { git = "https://github.com/openai/codex", path = "codex-rs/execpolicy" }
codex-state = { git = "https://github.com/openai/codex", path = "codex-rs/state" }
codex-file-search = { git = "https://github.com/openai/codex", path = "codex-rs/file-search" }
codex-linux-sandbox = { git = "https://github.com/openai/codex", path = "codex-rs/linux-sandbox" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
toml = "0.8"
base64 = "0.22"

# Crypto
md-5 = "0.10"
sha2 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
rand = "0.8"
secrecy = { version = "0.10", features = ["serde"] }
subtle = "2"

# Error handling (dora-rs pattern)
eyre = "0.6"
color-eyre = "0.6"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "2"
dirs = "5"
rustyline = "15"
open = "5"

# Keychain (platform-native secure credential storage)
keyring = { version = "3", default-features = false }

# HTTP client (using rustls for pure Rust, no OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "blocking", "multipart"] }
htmd = "0.5"

# Database (pure Rust)
redb = "2"
bincode = "1"

# Vector search
hnsw_rs = "0.3"

# Git (native, feature-gated)
gix = { version = "0.79", default-features = false, features = ["max-performance-safe", "revision", "blob-diff"] }

# AST parsing (feature-gated)
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"

# Diff
similar = "2"

# Office file manipulation (DOCX/PPTX/XLSX are ZIP+XML)
zip = "2"
quick-xml = "0.37"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Unix-specific (O_NOFOLLOW for symlink-safe file I/O)
libc = "0.2"

# LRU cache
lru = "0.16"

# File search
glob = "0.3"
regex = "1"
ignore = "0.4"

# Cron expressions
cron = "0.15"

# Time and IDs
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Async utilities
futures = "0.3"

# Browser automation
chromiumoxide = "0.9"
which = "7"

# Channel integrations (optional, pulled in via feature flags)
teloxide = { version = "0.17", default-features = false, features = ["rustls"] }
serenity = { version = "0.12", default-features = false, features = ["rustls_backend", "gateway", "client", "http", "model"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-native-roots"] }

# Email channel (optional)
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
tokio-rustls = { version = "0.26", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-native-certs = "0.8"
webpki-roots = "0.26"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
mailparse = "0.16"

# Web API (optional)
axum = { version = "0.8", features = ["multipart", "ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
rust-embed = "8"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Archive extraction
flate2 = "1"
tar = "0.4"

tower = { version = "0.5", features = ["util"] }

# Testing
tokio-test = "0.4"
tempfile = "3"

# -- Release configuration --------------------------------------------------
[workspace.metadata.release]
shared-version = true
consolidate-commits = true
tag-name = "v{{version}}"
tag-message = "Release {{version}}"
pre-release-commit-message = "chore: release {{version}}"
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "v{{version}}"]
publish = false
