[package]
name = "crew-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Agent runtime, tool execution, and coordination for crew-rs"

[dependencies]
crew-core = { workspace = true }
crew-memory = { workspace = true }
crew-llm = { workspace = true }
# codex-execpolicy = { workspace = true }  # Enable when codex builds
# codex-file-search = { workspace = true }
# codex-linux-sandbox = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
ignore = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
htmd = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
libc = { workspace = true }
gix = { workspace = true, optional = true }
similar = { workspace = true, optional = true }
tree-sitter = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
base64 = { workspace = true }
chromiumoxide = { workspace = true }
tempfile = { workspace = true }
lettre = { workspace = true }

[features]
git = ["dep:gix", "dep:similar"]
ast = ["dep:tree-sitter", "dep:tree-sitter-rust", "dep:tree-sitter-python", "dep:tree-sitter-javascript", "dep:tree-sitter-typescript"]

[lints]
workspace = true

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
