[package]
name = "crew-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI interface for crew-rs"

[[bin]]
name = "crew"
path = "src/main.rs"

[dependencies]
crew-core = { workspace = true }
crew-agent = { workspace = true }
crew-memory = { workspace = true }
crew-llm = { workspace = true }
crew-bus = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
uuid = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rustyline = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
open = { workspace = true }
base64 = { workspace = true }
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[features]
default = []
api = ["dep:axum", "dep:tower-http", "dep:futures"]
telegram = ["crew-bus/telegram"]
discord = ["crew-bus/discord"]
slack = ["crew-bus/slack"]
whatsapp = ["crew-bus/whatsapp"]
email = ["crew-bus/email"]
feishu = ["crew-bus/feishu"]

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
