[package]
name = "crew-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI interface for crew-rs"

[[bin]]
name = "crew"
path = "src/main.rs"

[dependencies]
crew-core = { workspace = true }
crew-agent = { workspace = true }
crew-memory = { workspace = true }
crew-llm = { workspace = true }
crew-bus = { workspace = true }
crew-pipeline = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
uuid = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
rustyline = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
open = { workspace = true }
zip = { workspace = true }
quick-xml = { workspace = true }
image = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
base64 = { workspace = true }
keyring = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
rust-embed = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }
lettre = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
teloxide = { workspace = true, optional = true }
sysinfo = { version = "0.34", optional = true }

[features]
default = []
api = ["dep:axum", "dep:tower-http", "dep:futures", "dep:rust-embed", "dep:metrics", "dep:metrics-exporter-prometheus", "dep:lettre", "dep:rand", "dep:sysinfo", "crew-bus/api"]
admin-bot = ["dep:teloxide", "dep:futures", "api"]
telegram = ["crew-bus/telegram"]
discord = ["crew-bus/discord"]
slack = ["crew-bus/slack"]
whatsapp = ["crew-bus/whatsapp"]
email = ["crew-bus/email"]
feishu = ["crew-bus/feishu"]
twilio = ["crew-bus/twilio"]
wecom = ["crew-bus/wecom"]
git = ["crew-agent/git"]
ast = ["crew-agent/ast"]

[lints]
workspace = true

[dev-dependencies]
tokio-test = { workspace = true }
