[package]
name = "crew-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LLM provider abstraction for crew-rs"

[dependencies]
crew-core = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
secrecy = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tokio-test = { workspace = true }
