[package]
name = "octos-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Agent runtime, tool execution, and coordination for octos"

[dependencies]
octos-core = { workspace = true }
octos-bus = { workspace = true }
octos-memory = { workspace = true }
octos-llm = { workspace = true }
octos-plugin = { workspace = true }
# codex-execpolicy = { workspace = true }  # Enable when codex builds
# codex-file-search = { workspace = true }
# codex-linux-sandbox = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
ignore = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
htmd = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
libc = { workspace = true }
gix = { workspace = true, optional = true }
similar = { workspace = true, optional = true }
tree-sitter = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
base64 = { workspace = true }
chromiumoxide = { workspace = true }
pdf-extract = { workspace = true }
tempfile = { workspace = true }
lettre = { workspace = true }
redb = { workspace = true }
hound = { workspace = true }
symphonia = { workspace = true, optional = true }

[features]
git = ["dep:gix", "dep:similar"]
ast = ["dep:tree-sitter", "dep:tree-sitter-rust", "dep:tree-sitter-python", "dep:tree-sitter-javascript", "dep:tree-sitter-typescript"]
# Enable MP3 decoding for the `AudioNonSilent` workspace-policy validator.
# WAV decoding is always-on via `hound`; MP3 pulls in `symphonia` which is
# heavier so we keep it opt-in for non-audio workspaces.
audio_mp3 = ["dep:symphonia"]

[lints]
workspace = true

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
