[package]
name = "octos-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core types, task model, and protocols for octos"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
eyre = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tokio-test = { workspace = true }
