[package]
name = "octos-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Episodic memory layer for octos, extends codex-state"

[dependencies]
octos-core = { workspace = true }
# codex-state = { workspace = true }  # Enable when codex builds
redb = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
hnsw_rs = { workspace = true }
bincode = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
