[package]
name = "octos-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Plugin SDK: manifest parsing, discovery, and gating for octos plugins"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
tokio = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
regex = { workspace = true }
