[package]
name = "octos-sandbox"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "AppContainer sandbox helper for octos on Windows"

[dependencies]
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
color-eyre = "0.6"

[target.'cfg(windows)'.dependencies]
rappct = "0.13"
windows = { version = "0.62", features = [
    "Win32_System_Threading",
    "Win32_Security",
] }

[lints]
workspace = true
