[package]
name = "account-manager"
version = "1.0.0"
edition = "2021"
description = "Standalone account management skill for sub-account CRUD"
authors = ["octos"]

[[bin]]
name = "account_manager"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[package.metadata.release]
release = false
