[package]
name = "deep-crawl"
version = "1.0.0"
edition = "2021"
description = "CDP-based recursive site crawler using headless Chrome"
authors = ["hagency"]

[[bin]]
name = "deep_crawl"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
scraper = "0.22"
url = "2"
regex = "1"
chrono = "0.4"
which = "7"
futures-util = "0.3"
tempfile = "3"
