[package]
name = "deep-search"
version = "1.0.0"
edition = "2021"
description = "Standalone deep search tool: web search + parallel page crawling"
authors = ["hagency"]

[[bin]]
name = "deep-search"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.22"
ego-tree = "0.10"
regex = "1"
url = "2"
chrono = "0.4"
