[package]
name = "deep-search"
version = "2.0.0"
edition = "2021"
description = "Deep multi-round web research: iterative search, parallel crawling, reference chasing"
authors = ["octos"]

[[bin]]
name = "deep-search"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.22"
ego-tree = "0.10"
regex = "1"
url = "2"

[package.metadata.release]
release = false
