[package]
name = "harness-starter-generic"
version = "1.0.0"
edition = "2024"
description = "Minimal starter for a single-artifact harnessed custom app"
authors = ["octos team"]
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "harness-starter-generic"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }

[dev-dependencies]
octos-agent = { workspace = true }
octos-plugin = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }

[package.metadata.release]
release = false

[lints]
workspace = true
